force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/Borrower_Added__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Borrower Added</label>
    <type>Checkbox</type>
</CustomField>