force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/Borrower_Removed__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Removed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Borrower Removed</label>
    <type>Checkbox</type>
</CustomField>