force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/cm_Loan_Approver__c.field-meta.xml
<CustomField>
    <fullName>cm_Loan_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the loan&apos;s final approval was approved by Approver 1 / Approver 2, that individual will be stored in this field upon creation.  Used in approval logic</description>
    <label>Loan Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Memos</relationshipName>
    <type>Lookup</type>
</CustomField>