force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/cm_Proposed_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>cm_Proposed_Maturity_Date__c</fullName>
    <description>Captures the Proposed Maturity Date which will be used to validate the length of this extension</description>
    <label>Proposed Maturity Date</label>
    <type>Date</type>
</CustomField>