force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/CollateralAdded__c.field-meta.xml
<CustomField>
    <fullName>CollateralAdded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collateral Added</label>
    <type>Checkbox</type>
</CustomField>