force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/CollateralReleasePriceChange__c.field-meta.xml
<CustomField>
    <fullName>CollateralReleasePriceChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collateral Release Price Change</label>
    <type>Checkbox</type>
</CustomField>