force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/CollateralRemoved__c.field-meta.xml
<CustomField>
    <fullName>CollateralRemoved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collateral Removed</label>
    <type>Checkbox</type>
</CustomField>