force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/CovenantChange__c.field-meta.xml
<CustomField>
    <fullName>CovenantChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Covenant Change</label>
    <type>Checkbox</type>
</CustomField>