force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/CurtailmentStructureChange__c.field-meta.xml
<CustomField>
    <fullName>CurtailmentStructureChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Curtailment Structure Change</label>
    <type>Checkbox</type>
</CustomField>