force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/GuarantyStructureChange__c.field-meta.xml
<CustomField>
    <fullName>GuarantyStructureChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guaranty Structure Change</label>
    <type>Checkbox</type>
</CustomField>