force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/InterestRateDecrease__c.field-meta.xml
<CustomField>
    <fullName>InterestRateDecrease__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest Rate Decrease</label>
    <type>Checkbox</type>
</CustomField>