force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/InterestRateIncrease__c.field-meta.xml
<CustomField>
    <fullName>InterestRateIncrease__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest Rate Increase</label>
    <type>Checkbox</type>
</CustomField>