force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/Last_Approver_from_Loan__c.field-meta.xml
<CustomField>
    <fullName>Last_Approver_from_Loan__c</fullName>
    <description>Auto-Set upon creation based on Loans value.  Used in Approval Process Logic</description>
    <label>Last Approver from Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lender</fullName>
            </value>
            <value>
                <fullName>Senior Lender</fullName>
            </value>
            <value>
                <fullName>CLC</fullName>
            </value>
            <value>
                <fullName>RDLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>