force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/Length_of_Short_Term_Extension__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Short_Term_Extension__c</fullName>
    <description>Captures the difference between the Proposed Maturity Date and Maturity Date at Time of Creation</description>
    <formula>cm_Proposed_Maturity_Date__c -  Maturity_Date_at_time_of_Creation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length of Short-Term Extension</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>