force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/LLC_BI__lookupKey__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__lookupKey__c</fullName>
    <description>This text field automatically populates and provides the object with a unique identifier.</description>
    <externalId>true</externalId>
    <label>lookupKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>