force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/LLC_BI__Memo_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Memo_Type__c</fullName>
    <description>This field is manually selected and is required when starting a memo. This field indicates the type of the Memo being created.</description>
    <label>Memo Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Change Memo</fullName>
                <default>true</default>
                <label>Change Memo</label>
            </value>
            <value>
                <fullName>Short Term Extension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>