force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/Loan_Officer__c.field-meta.xml
<CustomField>
    <fullName>Loan_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>