force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/LoanAgreementChanges__c.field-meta.xml
<CustomField>
    <fullName>LoanAgreementChanges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Agreement Changes</label>
    <type>Checkbox</type>
</CustomField>