force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/LoanAmountDecrease__c.field-meta.xml
<CustomField>
    <fullName>LoanAmountDecrease__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Amount Decrease</label>
    <type>Checkbox</type>
</CustomField>