force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/LoanAmountIncrease__c.field-meta.xml
<CustomField>
    <fullName>LoanAmountIncrease__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Amount Increase</label>
    <type>Checkbox</type>
</CustomField>