force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/LoanFeeChanges__c.field-meta.xml
<CustomField>
    <fullName>LoanFeeChanges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Fee Changes</label>
    <type>Checkbox</type>
</CustomField>