force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/Maturity_Date_at_time_of_Creation__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Date_at_time_of_Creation__c</fullName>
    <description>Captures the Loans Maturity Date at the time of creation which will be used to validate the length of this extension</description>
    <label>Maturity Date at time of Creation</label>
    <type>Date</type>
</CustomField>