force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/PaymentStructure__c.field-meta.xml
<CustomField>
    <fullName>PaymentStructure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Structure</label>
    <type>Checkbox</type>
</CustomField>