force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/ReApprovalAfter90Days__c.field-meta.xml
<CustomField>
    <fullName>ReApprovalAfter90Days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-Approval After 90 Days</label>
    <type>Checkbox</type>
</CustomField>